# TRPG-master

./: .gitignore  README.md  产品proposal-v0.1.md  产品proposal-v0.4.md  产品提案-v1.0.md
.claude/: launch.json
.github/workflows/: backend-ci.yml  trpg-backend-ci.yml  trpg-sdk-ci.yml
archive/: 7.9上午摘要.md  7.9下午会议摘要.md  产品原型.md  产品提案-初稿.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: examples.py  health.py  router.py
backend/app/core/: config.py  db.py  errors.py  logging.py
backend/app/crud/: example.py
backend/app/models/: example.py
backend/app/schemas/: common.py  example.py
backend/tests/: conftest.py  test_examples.py  test_health.py
docs/: api-contract.md  ms1-sprint-plan.md
docs/product/: 战略决策-产品方向与范围-v1.0.md
docs/proposals/: proposal-01-规则引擎.md  proposal-02-AI输出格式.md  proposal-03-AI叙事方案.md
docs/technical/: api-contract.md
references/: ### 议题描述.md  #参考proposal.md  产品设计方法论.md  产品设计模版.md
sdk/: package-lock.json  package.json  rollup.config.mjs  tsconfig.json
sdk/src/: client.ts  index.ts  types.ts
sdk/src/resources/: examples.ts
trpg-app/: package-lock.json  package.json
trpg-app/src/: App.tsx  styles.css
trpg-backend/: .env.example  pyproject.toml
trpg-backend/app/: main.py
trpg-backend/app/controller/: ws.py
trpg-backend/app/controller/v1/: auth.py  examples.py  health.py  me.py  modules.py  rooms.py  router.py
trpg-backend/app/core/: config.py  db.py  errors.py  logging.py
trpg-backend/app/dto/: auth.py  character.py  common.py  example.py  room.py
trpg-backend/app/models/: __init__.py  example.py  room.py
trpg-backend/app/service/: auth.py  example.py  room.py  ws_manager.py
trpg-backend/tests/: conftest.py  test_auth.py  test_characters.py  test_examples.py  test_health.py  test_rooms.py  test_ws.py
trpg-frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
trpg-frontend/src/: App.tsx  styles.css
trpg-frontend/src/config/: games.ts  routes.ts
trpg-frontend/src/data/: character-model.ts  occupations.ts  skills.ts  types.ts
trpg-frontend/src/hooks/: useRoomPlayers.ts
trpg-frontend/src/routes/auth/: AuthHeader.tsx  (+2 more)
trpg-frontend/src/services/: api-client.ts  auth.ts  room.ts
trpg-frontend/src/stores/: auth-store.ts  character-store.ts  game-store.ts  room-store.ts
trpg-frontend/src/types/: game.ts  message.ts  navigation.ts
trpg-sdk/: eslint.config.js  package-lock.json  package.json  rollup.config.mjs
trpg-sdk/src/: client.ts  index.ts  types.ts
trpg-sdk/src/resources/: auth.ts  characters.ts  examples.ts  room-socket.ts  rooms.ts
wiki/: 00-软件工程规范.md  01-产品设计规范.md  02-架构设计规范.md  03-GitHub-过程管理规范.md  Home.md
(+21 files in other folders)
